Fix log message and fix a deprecation warning